# Agentic-AI

./: README.md  pyproject.toml
04_Parallel_Workflows/: bmi_workflow.ipynb  llm_workflow.ipynb  prompt_chaining_workflow.ipynb
04_Sequential_Workflow/: llm_workflow.ipynb  parallel_workflow.ipynb  prompt_chaining_workflow.ipynb
05_Parallel_Workflows/: llm_parallel_workflow.ipynb  parallel_workflow.ipynb
