[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "grandalf>=0.8",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-experimental>=0.4.1",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "youtube-transcript-api>=1.2.3",
]
